--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+/.idea/gradle.xml
+/.idea/misc.xml
+/.idea/runConfigurations.xml
+/.idea/vcs.xml
+/.idea/compiler.xml
+/.idea/encodings.xml
+/.idea/modules.xml
 .DS_Store
 /build
 /captures
